spin-7-x-langsung-keluar-scatter-hitam-mahjong-wins-3-di-manut88.html

--- a/spin-7-x-langsung-keluar-scatter-hitam-mahjong-wins-3-di-manut88.html
+++ b/spin-7-x-langsung-keluar-scatter-hitam-mahjong-wins-3-di-manut88.html
@@ -623,7 +623,7 @@
                     <a class="grey" href="https://rssiloam.github.io/ac.id/spin-7-x-langsung-keluar-scatter-hitam-mahjong-wins-3-di-manut88.html" data-spm-click="gostr=/lzdpub.header.tbar;locaid=d5">LOGIN</a>
                   </div>
                   <div class="top-links-item grey" id="anonSignup">
-                    <a class="grey" href="https://rssiloam.github.io/ac.id/spin-7-x-langsung-keluar-scatter-hitam-mahjong-wins-3-di-manut88.html data-spm-click="gostr=/lzdpub.header.tbar;locaid=d6">DAFTAR</a>
+                    <a class="grey" href="https://rssiloam.github.io/ac.id/spin-7-x-langsung-keluar-scatter-hitam-mahjong-wins-3-di-manut88.html" data-spm-click="gostr=/lzdpub.header.tbar;locaid=d6">DAFTAR</a>
                   </div>
                   <div class="top-links-item top-links-item-hidden" id="topActionUserAccont" data-spm-click="gostr=/lzdpub.header.tbar;locaid=d7">
                     <span id="myAccountTrigger" class="grey"></span>
